add lankan keyboard layout
增加阑干拼音键盘布局，但未成功将内嵌字体关联，需要手机安装有字体。消除build.gradle的弃用警告。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,13 @@ android {
         }
     }
     namespace 'rkr.simplekeyboard.inputmethod'
+    buildFeatures {
+        buildConfig true
+    }
+    lint {
+        checkReleaseBuilds false
+        abortOnError false
+    }
 }
 
 dependencies {
